production/main/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: main
  namespace: production
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hoprd
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: production
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hoprd
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hoprd-operator
      ports:
        - protocol: TCP
          port: 3001
